src/yini_test/cases/golden/lenient/valid/inline-objects/colon-separator.yini
@yini

^ Objects
cache = { enabled: true, maxMb: 256, ttlSec: 30 }
