src/yini_test/cases/golden/lenient/invalid/inline-objects/malformed-inline-object.yini
@yini

^ Objects
cache = { enabled: true, maxMb: 256
